packages/delta_ffi/headers/deltachat.h

typedef struct dc_context dc_context_t;
typedef struct dc_array dc_array_t;
typedef struct dc_msg dc_msg_t;
uint64_t dc_msg_get_timestamp(const dc_msg_t* msg);
int32_t dc_msg_is_outgoing(const dc_msg_t* msg);
int32_t dc_msg_get_state(const dc_msg_t* msg);
dc_msg_t* dc_msg_new(dc_context_t* ctx, int32_t viewtype);
void dc_msg_set_text(dc_msg_t* msg, const char* text);
void dc_msg_set_html(dc_msg_t* msg, const char* html);
void dc_msg_set_subject(dc_msg_t* msg, const char* subject);
void dc_msg_set_file_and_deduplicate(dc_msg_t* msg, const char* file, const char* name, const char* filemime);
char* dc_msg_get_file(const dc_msg_t* msg);
char* dc_msg_get_filename(const dc_msg_t* msg);
char* dc_msg_get_filemime(const dc_msg_t* msg);
uint64_t dc_msg_get_filebytes(const dc_msg_t* msg);
int32_t dc_msg_get_width(const dc_msg_t* msg);
int32_t dc_msg_get_height(const dc_msg_t* msg);
dc_array_t* dc_get_fresh_msgs(dc_context_t* ctx);
int dc_get_fresh_msg_cnt(dc_context_t* ctx, uint32_t chat_id);
void dc_marknoticed_chat(dc_context_t* ctx, uint32_t chat_id);
void dc_markseen_msgs(dc_context_t* ctx, const uint32_t* msg_ids, int msg_cnt);
void dc_delete_msgs(dc_context_t* ctx, const uint32_t* msg_ids, int msg_cnt);
void dc_msg_set_quote(dc_msg_t* msg, const dc_msg_t* quote);
dc_msg_t* dc_msg_get_quoted_msg(const dc_msg_t* msg);
char* dc_msg_get_quoted_text(const dc_msg_t* msg);
void dc_forward_msgs(dc_context_t* ctx, const uint32_t* msg_ids, int msg_cnt, uint32_t chat_id);
void dc_set_draft(dc_context_t* ctx, uint32_t chat_id, dc_msg_t* msg);
dc_msg_t* dc_get_draft(dc_context_t* ctx, uint32_t chat_id);
dc_array_t* dc_search_msgs(dc_context_t* ctx, uint32_t chat_id, const char* query);