packages/delta_ffi/lib/src/bindings.dart


  late final _dc_msg_get_timestampPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_timestamp');
  late final _dc_msg_get_timestamp = _dc_msg_get_timestampPtr
      .asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_is_outgoing(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_is_outgoing(
      msg,
    );
  }

  late final _dc_msg_is_outgoingPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_is_outgoing');
  late final _dc_msg_is_outgoing =
      _dc_msg_is_outgoingPtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_state(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_state(
      msg,
    );
  }

  late final _dc_msg_get_statePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_state');
  late final _dc_msg_get_state =
      _dc_msg_get_statePtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_msg_t> dc_msg_new(
    ffi.Pointer<dc_context_t> ctx,
    int viewtype,
  ) {
    return _dc_msg_new(
      ctx,
      viewtype,
    );
  }

  late final _dc_msg_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_msg_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Int32)>>('dc_msg_new');
  late final _dc_msg_new = _dc_msg_newPtr.asFunction<
      ffi.Pointer<dc_msg_t> Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_msg_set_text(
    ffi.Pointer<dc_msg_t> msg,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _dc_msg_set_text(
      msg,
      text,
    );
  }

  late final _dc_msg_set_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_msg_t>,
              ffi.Pointer<ffi.Char>)>>('dc_msg_set_text');
  late final _dc_msg_set_text = _dc_msg_set_textPtr.asFunction<
      void Function(ffi.Pointer<dc_msg_t>, ffi.Pointer<ffi.Char>)>();

  void dc_msg_set_html(
    ffi.Pointer<dc_msg_t> msg,
    ffi.Pointer<ffi.Char> html,
  ) {
    return _dc_msg_set_html(
      msg,
      html,
    );
  }

  late final _dc_msg_set_htmlPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_msg_t>,
              ffi.Pointer<ffi.Char>)>>('dc_msg_set_html');
  late final _dc_msg_set_html = _dc_msg_set_htmlPtr.asFunction<
      void Function(ffi.Pointer<dc_msg_t>, ffi.Pointer<ffi.Char>)>();

  void dc_msg_set_subject(
    ffi.Pointer<dc_msg_t> msg,
    ffi.Pointer<ffi.Char> subject,
  ) {
    return _dc_msg_set_subject(
      msg,
      subject,
    );
  }

  late final _dc_msg_set_subjectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_msg_t>,
              ffi.Pointer<ffi.Char>)>>('dc_msg_set_subject');
  late final _dc_msg_set_subject = _dc_msg_set_subjectPtr.asFunction<
      void Function(ffi.Pointer<dc_msg_t>, ffi.Pointer<ffi.Char>)>();

  void dc_msg_set_file_and_deduplicate(
    ffi.Pointer<dc_msg_t> msg,
    ffi.Pointer<ffi.Char> file,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> filemime,
  ) {
    return _dc_msg_set_file_and_deduplicate(
      msg,
      file,
      name,
      filemime,
    );
  }

  late final _dc_msg_set_file_and_deduplicatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<dc_msg_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('dc_msg_set_file_and_deduplicate');
  late final _dc_msg_set_file_and_deduplicate =
      _dc_msg_set_file_and_deduplicatePtr.asFunction<
          void Function(ffi.Pointer<dc_msg_t>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_file(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_file(
      msg,
    );
  }

  late final _dc_msg_get_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_file');
  late final _dc_msg_get_file = _dc_msg_get_filePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_filename(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_filename(
      msg,
    );
  }

  late final _dc_msg_get_filenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_filename');
  late final _dc_msg_get_filename = _dc_msg_get_filenamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_filemime(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_filemime(
      msg,
    );
  }

  late final _dc_msg_get_filemimePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_filemime');
  late final _dc_msg_get_filemime = _dc_msg_get_filemimePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_filebytes(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_filebytes(
      msg,
    );
  }

  late final _dc_msg_get_filebytesPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_filebytes');
  late final _dc_msg_get_filebytes = _dc_msg_get_filebytesPtr
      .asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_width(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_width(
      msg,
    );
  }

  late final _dc_msg_get_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_width');
  late final _dc_msg_get_width =
      _dc_msg_get_widthPtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  int dc_msg_get_height(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_height(
      msg,
    );
  }

  late final _dc_msg_get_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<dc_msg_t>)>>(
          'dc_msg_get_height');
  late final _dc_msg_get_height =
      _dc_msg_get_heightPtr.asFunction<int Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_array_t> dc_get_fresh_msgs(
    ffi.Pointer<dc_context_t> ctx,
  ) {
    return _dc_get_fresh_msgs(
      ctx,
    );
  }

  late final _dc_get_fresh_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_array_t> Function(
              ffi.Pointer<dc_context_t>)>>('dc_get_fresh_msgs');
  late final _dc_get_fresh_msgs = _dc_get_fresh_msgsPtr.asFunction<
      ffi.Pointer<dc_array_t> Function(ffi.Pointer<dc_context_t>)>();

  int dc_get_fresh_msg_cnt(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_get_fresh_msg_cnt(
      ctx,
      chat_id,
    );
  }

  late final _dc_get_fresh_msg_cntPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_fresh_msg_cnt');
  late final _dc_get_fresh_msg_cnt = _dc_get_fresh_msg_cntPtr
      .asFunction<int Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_marknoticed_chat(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_marknoticed_chat(
      ctx,
      chat_id,
    );
  }

  late final _dc_marknoticed_chatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_marknoticed_chat');
  late final _dc_marknoticed_chat = _dc_marknoticed_chatPtr
      .asFunction<void Function(ffi.Pointer<dc_context_t>, int)>();

  void dc_markseen_msgs(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Uint32> msg_ids,
    int msg_cnt,
  ) {
    return _dc_markseen_msgs(
      ctx,
      msg_ids,
      msg_cnt,
    );
  }

  late final _dc_markseen_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>,
              ffi.Int)>>('dc_markseen_msgs');
  late final _dc_markseen_msgs = _dc_markseen_msgsPtr.asFunction<
      void Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>, int)>();

  void dc_delete_msgs(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Uint32> msg_ids,
    int msg_cnt,
  ) {
    return _dc_delete_msgs(
      ctx,
      msg_ids,
      msg_cnt,
    );
  }

  late final _dc_delete_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>,
              ffi.Int)>>('dc_delete_msgs');
  late final _dc_delete_msgs = _dc_delete_msgsPtr.asFunction<
      void Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>, int)>();

  void dc_msg_set_quote(
    ffi.Pointer<dc_msg_t> msg,
    ffi.Pointer<dc_msg_t> quote,
  ) {
    return _dc_msg_set_quote(
      msg,
      quote,
    );
  }

  late final _dc_msg_set_quotePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_msg_t>,
              ffi.Pointer<dc_msg_t>)>>('dc_msg_set_quote');
  late final _dc_msg_set_quote = _dc_msg_set_quotePtr.asFunction<
      void Function(ffi.Pointer<dc_msg_t>, ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_msg_t> dc_msg_get_quoted_msg(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_quoted_msg(
      msg,
    );
  }

  late final _dc_msg_get_quoted_msgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_msg_t> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_quoted_msg');
  late final _dc_msg_get_quoted_msg = _dc_msg_get_quoted_msgPtr
      .asFunction<ffi.Pointer<dc_msg_t> Function(ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<ffi.Char> dc_msg_get_quoted_text(
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_msg_get_quoted_text(
      msg,
    );
  }

  late final _dc_msg_get_quoted_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<dc_msg_t>)>>('dc_msg_get_quoted_text');
  late final _dc_msg_get_quoted_text = _dc_msg_get_quoted_textPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<dc_msg_t>)>();

  void dc_forward_msgs(
    ffi.Pointer<dc_context_t> ctx,
    ffi.Pointer<ffi.Uint32> msg_ids,
    int msg_cnt,
    int chat_id,
  ) {
    return _dc_forward_msgs(
      ctx,
      msg_ids,
      msg_cnt,
      chat_id,
    );
  }

  late final _dc_forward_msgsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>,
              ffi.Int, ffi.Uint32)>>('dc_forward_msgs');
  late final _dc_forward_msgs = _dc_forward_msgsPtr.asFunction<
      void Function(
          ffi.Pointer<dc_context_t>, ffi.Pointer<ffi.Uint32>, int, int)>();

  void dc_set_draft(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    ffi.Pointer<dc_msg_t> msg,
  ) {
    return _dc_set_draft(
      ctx,
      chat_id,
      msg,
    );
  }

  late final _dc_set_draftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<dc_context_t>, ffi.Uint32,
              ffi.Pointer<dc_msg_t>)>>('dc_set_draft');
  late final _dc_set_draft = _dc_set_draftPtr.asFunction<
      void Function(ffi.Pointer<dc_context_t>, int, ffi.Pointer<dc_msg_t>)>();

  ffi.Pointer<dc_msg_t> dc_get_draft(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
  ) {
    return _dc_get_draft(
      ctx,
      chat_id,
    );
  }

  late final _dc_get_draftPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<dc_msg_t> Function(
              ffi.Pointer<dc_context_t>, ffi.Uint32)>>('dc_get_draft');
  late final _dc_get_draft = _dc_get_draftPtr.asFunction<
      ffi.Pointer<dc_msg_t> Function(ffi.Pointer<dc_context_t>, int)>();

  ffi.Pointer<dc_array_t> dc_search_msgs(
    ffi.Pointer<dc_context_t> ctx,
    int chat_id,
    ffi.Pointer<ffi.Char> query,
  ) {
    return _dc_search_msgs(
      ctx,
      chat_id,
      query,
    );
  }
